# Sam-s-Tasks

./: LICENSE  README.md  database.db  pyproject.toml
src/: database.db  database.py  main.py
src/handlers/: cont_colors.py  database.py  nav_hand.py  settings.py
src/views/: add_task.py  completed.py  home.py  settings.py  taskv.py
src/views/view_classes/: task_container_main.py
