[project]
name = "SamTask"
version = "0.0.1"
description = "Una App de tareas"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "SamTorr13", email = "SamTorr13@outlook.com" }
]
dependencies = [
  "flet==0.27.6"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "dev.SamTorr13"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "SamTask"

# company name to display in about app dialogs
company = "SamTorr13"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}